objects/Traver_Coaching__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_1__c</fullName>
        <inlineHelpText>Action Plan #1 (What are the steps necessary to make that happen)?</inlineHelpText>
        <label>Action Plan 1</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Action_Plan_2__c</fullName>
        <inlineHelpText>Action Plan #2 (What are the steps necessary to make that happen)?</inlineHelpText>
        <label>Action Plan 2</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Action_Plan_3__c</fullName>
        <inlineHelpText>Action Plan #3 (What are the steps necessary to make that happen)?</inlineHelpText>
        <label>Action Plan 3</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Actual_Visiit_Date__c</fullName>
        <label>Actual Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointments_Set__c</fullName>
        <inlineHelpText>How many appointments did the dealership set during your visit?</inlineHelpText>
        <label>Appointments Set</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDI_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are they updating Business Development Intelligence (Tool)?.</inlineHelpText>
        <label>BDI Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD__c</fullName>
        <inlineHelpText>Add any comments about BD Boot Camp here.</inlineHelpText>
        <label>BD Boot Camp Comments</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOU_Utilization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the store effectively applying the skills and utilizing the tools from BOU?</inlineHelpText>
        <label>BOU Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boot_Camp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are they scheduled or have they already attended boot camp?</inlineHelpText>
        <label>Boot Camp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coaching_Contacts__c</fullName>
        <inlineHelpText>Please provide your name, email address and contact information so that the store will
always have access to this information in the &quot;Completed Tasks&quot;.</inlineHelpText>
        <label>Coaching Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Onsite_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only if Confirmation is created</inlineHelpText>
        <label>Confirmation Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Per_Month_Number__c</fullName>
        <formula>Traver_Project__r.Days_Per_Month_Number__c</formula>
        <label>Days Per Month Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declined_Service_Calls__c</fullName>
        <label>Declined Service Calls</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defection__c</fullName>
        <label>Defection</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equity_Mining__c</fullName>
        <label>Equity Mining</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expense Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_1__c</fullName>
        <inlineHelpText>Goal #1 (Goal or accomplishment to be done prior to next visit)?</inlineHelpText>
        <label>Goal 1</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_2__c</fullName>
        <inlineHelpText>Goal #2 (Goal or accomplishment to be done prior to next visit)?</inlineHelpText>
        <label>Goal 2</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_3__c</fullName>
        <inlineHelpText>Goal #3 (Goal or accomplishment to be done prior to next visit)?</inlineHelpText>
        <label>Goal 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoming_Sales_Calls__c</fullName>
        <label>Incoming Sales Calls</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incoming_Service_Calls__c</fullName>
        <label>Incoming Service Calls</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet__c</fullName>
        <label>Internet</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Observations_1__c</fullName>
        <inlineHelpText>Infrastructure - Key Observations</inlineHelpText>
        <label>Key Observations</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Measurement_1__c</fullName>
        <inlineHelpText>How are we going to measure this Goal (Tools, reports, etc)? TAKE A PICTURE OF THE
TOOL/REPORT THAT IS GOING TO BE USED</inlineHelpText>
        <label>Measurement 1</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Measurement_2__c</fullName>
        <inlineHelpText>How are we going to measure this Goal (Tools, reports, etc)? TAKE A PICTURE OF THE
TOOL/REPORT THAT IS GOING TO BE USED</inlineHelpText>
        <label>Measurement 2</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>New_Mgr__c</fullName>
        <inlineHelpText>How many new managers since last visit? (If Any)</inlineHelpText>
        <label>New Mgr&apos;s</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Coaching_Call__c</fullName>
        <label>Next Coaching Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Visit_Date__c</fullName>
        <label>Next Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Visit_Strategy__c</fullName>
        <label>Next Visit Strategy</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>No_Show_Appointments__c</fullName>
        <label>No Show Appointments</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Days_Purchased__c</fullName>
        <formula>Traver_Project__r.Total_Onsite_Purchased__c</formula>
        <label>Onsite Days Purchased</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Base__c</fullName>
        <label>Owner Base</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartyID__c</fullName>
        <label>PartyID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_Since_Last_Session__c</fullName>
        <label>Progress Since Last Session</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Account__c</fullName>
        <formula>Traver_Project__r.Account__r.Name</formula>
        <label>Project Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recalls__c</fullName>
        <label>Recalls</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Service__c</fullName>
        <label>Recommended Service</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_BDI_Progress__c</fullName>
        <label>Review BDI Progress</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Recent_Visit__c</fullName>
        <inlineHelpText>Premium Packages Only</inlineHelpText>
        <label>Review Recent In-store Visit</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Staff_with_Most_Appointments__c</fullName>
        <inlineHelpText>Staff with most Appointments – (Name, phone, email)</inlineHelpText>
        <label>Staff with Most Appointments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Update_Calls__c</fullName>
        <label>Status Update Calls</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agenda Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Expenses__c</fullName>
        <label>Total Billable Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Traver_Project__c</fullName>
        <label>Traver Project</label>
        <referenceTo>Traver_Project__c</referenceTo>
        <relationshipName>Traver_Onsite_Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unsold_Follow_Up__c</fullName>
        <label>Unsold Follow Up</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upload_3__c</fullName>
        <inlineHelpText>How are we going to measure this Goal (Tools, reports, etc)? TAKE A PICTURE OF THE
TOOL/REPORT THAT IS GOING TO BE USED</inlineHelpText>
        <label>Upload 3</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>X1_1_Appt_Ratio__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the dealership exceed a 1:1 Appointment Ratio the day(s) of your visit? Submit a
picture of the Appointment Board to document their Appointment Ratio.</inlineHelpText>
        <label>1:1 Appt Ratio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5_Star_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5 Star Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <label>Traver Coaching</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Traver Coaching ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Traver Coaching</pluralLabel>
    <recordTypes>
        <fullName>EPC_Coaching_Log</fullName>
        <active>true</active>
        <description>EPC Coaching Log</description>
        <label>EPC Coaching Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>Process_Coach_Visit</fullName>
        <active>true</active>
        <description>Process Coach Visit</description>
        <label>Process Coach Visit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>